--- a/Html/sView.html
+++ b/Html/sView.html
@@ -24,11 +24,11 @@
 <body>
     <div id="back">
     <header>
-        <a href="./Home.html"><img src="../Media/logo.png" alt="logo" id="logo"></a>
+        <a href="../index.html"><img src="../Media/logo.png" alt="logo" id="logo"></a>
         <nav id="menu">
-            <li><a href="./Home.html"><svg xmlns="http://www.w3.org/2000/svg" id="homelogo" width="25" height="25" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" id="homelogo" width="25" height="25" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                 <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
-              </svg> Home</a></li>
+              </svg></a></li>
         </nav>
     </header>
             <h2>2025 Annual Result</h2>
