--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#feature">Features</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="tLogin.html">Result</a></li>
+        <li><a href="./Html/tLogin.html">Result</a></li>
     </nav>
     </div>
 </header>
