--- a/Html/tView.html
+++ b/Html/tView.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="Author" content="Purushothaman">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Keywoard" content="Oxford Public School, best school in chennai, quality education, top schools in chennai,
+        <meta name="Keywords" content="Oxford Public School, best school in chennai, quality education, top schools in chennai,
             admissions open, modern facilities, experienced teachers,school for excellence, CBSE schools, student progress,
             extracurricular activities, academic programs">
-        <meta name="Discription" content="Oxford Public School offers quality education, modern facilities, and 
+        <meta name="Description" content="Oxford Public School offers quality education, modern facilities, and 
                     a nurturing environment for students to excel. Enroll now!">
         <title>oxford public school</title>
         <link rel="stylesheet" href="../css/tView.css" >
