--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="Description" content="Oxford Public School offers quality education, modern facilities, and 
                 a nurturing environment for students to excel. Enroll now!">
     <title>oxford public school</title>
-    <link rel="stylesheet" href="../css/Home.css" >
-    <link rel="icon" href="../Media/webicon.png">
+    <link rel="stylesheet" href="./css/Home.css" >
+    <link rel="icon" href="./Media/webicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <header>
     <div>
-    <a href="./Home.html"><img src="../Media/logo.png" alt="logo" id="logo"></a>
+    <a href="./Home.html"><img src="./Media/logo.png" alt="logo" id="logo"></a>
     </div>
     <div>
     <nav id="menu">
