--- a/Html/tLogin.html
+++ b/Html/tLogin.html
@@ -33,8 +33,8 @@
             <h2 id="thead">Teachers Login</h2>
             <div>
             <form>
-                <input type="number" placeholder="Identification Number" required id="num"> <br>
-                <input type="password" placeholder="Password" required id="pass"><br>
+                <input type="number" placeholder="Identification eg:123" required id="num"> <br>
+                <input type="password" placeholder="Password eg:123" required id="pass"><br>
                 <input type="submit" value="Login" id="sub"><br>
             </form>
             </div>
